# photo-editor

./: .gitignore  CLAUDE.md  README.md  index.html  package-lock.json  package.json  tsconfig.json  vitest.config.ts
.claude/: settings.local.json
.github/workflows/: ci.yml
scripts/: fetch-lensfun.sh  pre-push  setup-hooks.sh
src/: main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  state.rs
src-tauri/src/ai/: denoise.rs  mod.rs
src-tauri/src/catalog/: db.rs  import.rs  mod.rs  models.rs  queries.rs  search.rs
src-tauri/src/commands/: catalog.rs  develop.rs  export.rs  image.rs  mod.rs  system.rs
src-tauri/src/gpu/: buffers.rs  context.rs  cpu_edits.rs  curves.rs  mod.rs  pipeline.rs  spatial.rs
src-tauri/src/gpu/passes/: basic_adjustments.rs  clarity.rs  dehaze.rs  denoise.rs  grain.rs  hsl.rs  mod.rs  sharpening.rs  tone_curve.rs  tonemap.rs  vignette.rs  white_balance.rs
src-tauri/src/gpu/shaders/: basic_adjustments.wgsl  clarity.wgsl  dehaze.wgsl  denoise_bilateral.wgsl  grain.wgsl  hsl.wgsl  sharpening.wgsl  tone_curve.wgsl  tonemap_output.wgsl  vignette.wgsl  white_balance.wgsl
src-tauri/src/imaging/: exif.rs  export.rs  lens_correction.rs  lens_profiles.rs  loader.rs  mod.rs  raw.rs  thumbnail.rs
src/api/: catalog.ts  image.ts  processing.ts  system.ts
src/hooks/: useDebounce.ts  useDragAndDrop.ts  useKeyboardShortcuts.ts  useThrottle.ts  useThumbnail.ts
src/stores/: catalogStore.ts  developStore.ts  uiStore.ts
(+82 files in other folders)
